<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MyProfileFragment">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_cadastro"
        android:background="@drawable/tittle_cadastro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nomecadastro"
        android:ems="10"
        android:id="@+id/nomedoador"
        android:layout_below="@+id/title_cadastro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/usuariocadastro"
        android:ems="10"
        android:id="@+id/signup_login"
        android:layout_below="@+id/nomedoador"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/senhacadastro"
        android:layout_below="@id/signup_login"
        android:id="@+id/signup_password"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/confirmarsenhacadastro"
        android:layout_below="@id/signup_password"
        android:id="@+id/confirm_signup_password"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/emailcadastro"
        android:layout_below="@+id/confirm_signup_password"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/titletiposanguineo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_email"
        android:text="Tipo sanguíneo:"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <Spinner
        android:id="@+id/signup_blood_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/categoria"
        android:layout_below="@id/titletiposanguineo"
        android:layout_centerHorizontal="true"
        >
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup_blood_type"
        android:id="@+id/signup_title_gender"
        android:text="Sexo:"
        android:layout_centerHorizontal="true"
        />

    <Spinner
        android:id="@+id/signup_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/gender"
        android:layout_below="@id/signup_title_gender"
        android:layout_centerHorizontal="true"
        >
    </Spinner>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_btn"
        android:background="@drawable/btn_cadastrar"
        android:layout_below="@+id/signup_gender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

</RelativeLayout>